[tool.poetry]
name = "sansongbot"
version = "0.1.0"
description = "TSSG Bot"
authors = ["Ugo Nzongani"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
